# ServiceX_analysis_utils

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  pypi.yml  trigger_website_build.yaml
docs/: conf.py  file_introspecting.md  index.md  installation.md  materialization.md
docs/_build/doctrees/: environment.pickle  file_introspecting.doctree  index.doctree  installation.doctree  materialization.doctree
docs/_build/html/: .buildinfo  file_introspecting.html  genindex.html  index.html  installation.html  materialization.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: file_introspecting.md.txt  materialization.md.txt
docs/source/: conf.py  file_introspecting.md  index.md  installation.md  materialization.md
docs/source/_templates/: page.html
servicex_analysis_utils/: __init__.py  dataset.py  dataset_resolver.py  decode-raw-test.py  file_peeking.py  materialization.py  read-buffers.py  read_buffers.py
tests/: test_dataset_resolver.py  test_materialization.py  test_materialization_parquet.py  test_materialization_rntuple.py  test_parquet.py  test_typetracer.py
tests/data/: expected_metadata.txt  expected_structure.txt
