[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"

[project]
name = "servicex_analysis_utils"
version = "1.1.1"
description = "A package with analysis tools for ServiceX."
authors = [{name = "Artur Cordeiro Oudot Choi", email = "acordeir@cern.ch"}]
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
dependencies = [ 
    "servicex",
    "uproot>=5.0",
    "awkward>=2.6",
    "dask-awkward>=2024.12.2",
]

[project.urls]
"Source Code" = "https://github.com/ssl-hep/ServiceX_analysis_utils"
"Issue Tracker" = "https://github.com/ssl-hep/ServiceX_analysis_utils/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/servicex_analysis_utils"
]

[project.optional-dependencies]

# Developer extras
test = [
    "pytest>=7.2.0",
    "numpy>=1.21", 
    "pyarrow>=8.0.0",
    "pandas",
    "miniopy-async==1.21.1"
]

docs = [
    "sphinx>=5.0",
    "sphinx-copybutton",
    "myst-parser",
    "furo",
]

[project.scripts]
servicex-get-structure = "servicex_analysis_utils.cli:app"


[tool.hatch.build.targets.wheel]
packages = ["servicex_analysis_utils"]
